--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
     "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "^14.0.4",
     "expo": "~52.0.30",
+    "expo-constants": "~17.0.7",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.17",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
-    "react-native-web": "~0.19.13",
-    "expo-router": "~4.0.17",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "expo-linking": "~7.0.5",
-    "expo-constants": "~17.0.7"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.13",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
